--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
 <head>
   <meta charset="utf-8">
   <title>Abhi's personal site </title>
+  <style>
+    hr {
+      background-color: blue;
+    }
+  </style>
 </head>
-<style media="screen">
 
-</style>
-<body>
+<body style="background-color: #c3aed6";>
   <hr size="3" noshade>
-  <h1>Abhinav Kumar</h1>
-  <p> <em>Software Engineer- <strong>Testing</strong></em></p>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="testing.png" alt="Web testing" height="100" width="100"></td>
+      <td><h1>Abhinav Kumar </h1> <p> <em>Software Engineer- <strong>Testing</strong></em></p></td>
+    </tr>
+  </table>
   <hr size="3" noshade>
   <strong><p>Hi there I am <a href="https://app.slack.com/client/T040MDNR0/D01A5DVG6R2">Abhinav Kumar</a> a software test engineer.
     <br> I have over 5 years of experience in web,
     <br> mobile and desktop applications testing.
   </p></strong>
   <hr size="3" noshade>
-  <img src="testing.png" alt="Web testing">
+
   <h3>My Academics:</h3>
+
   <ol>
     <li>BD Sharma</li>
     <ul>
@@ -40,7 +48,7 @@
       <li>Std 7</li>
       <li>Std8</li>
     </ul>
-    <li>RSB</li>
+  <!--  <li>RSB</li>
     <ul>
       <li>Std 9</li>
       <ul>
@@ -50,10 +58,57 @@
       <ul>
         <li>2008</li>
       </ul>
-    </ul>
+    </ul> -->
   </ol>
+  <hr size="3" noshade>
+ <table border="2" noshade>
+   <thead>
+     <tr>
+       <th>Work</th>
+       <th>Dates</th>
+     </tr>
+     <tbody>
+     <tr>
+       <td>Software-trainee</td>
+       <td>2015-2017</td>
+     </tr>
+     <tr>
+       <td>Software Test Engineer</td>
+       <td>2017-2020</td>
+     </tr>
+     </tbody>
+     <tfoot>
+
+     </tfoot>
+   </thead>
+ </table>
+ <hr size="3" noshade>
+<table border="2">
+  <thead>
+    <tr>
+      <th>Skills</th>
+      <th>Ratings</th>
+    </tr>
+  <tbody>
+    <tr>
+      <td>Web development</td>
+      <td>🟠🟠🟠🟠</td>
+    </tr>
+    <tr>
+      <td>Software Testing</td>
+      <td>🟤🟤🟤</td>
+    </tr>
+    <tr>
+      <td>Photography</td>
+      <td>🔴🔴</td>
+    </tr>
+  </tbody>
+  </thead>
+
+</table>
+<br><br>
   <a href="Colleges.html">My Colleges </a> <br>
-  <a href="Contact.html">Contact Me</a>
+  <a href="Contact.html">Contact Me</a> <br>
   <a href="Form.html">Form</a>
 </body>
 
